@@ -49,6 +49,7 @@
  * 13-Jun-2007 : Fixed error in previous patch (DG);
  * 28-Sep-2007 : Fixed cloning bug (DG);
  * 02-Oct-2007 : Fixed bug in updating cached bounds (DG);
+ * 03-Oct-2007 : Fixed another bug in updating cached bounds (DG);
  *
  */
 
@@ -118,12 +119,14 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      *
      * @param list  a collection of values from which the various medians will 
      *              be calculated.
-     * @param rowKey  the row key.
-     * @param columnKey  the column key.
+     * @param rowKey  the row key (<code>null</code> not permitted).
+     * @param columnKey  the column key (<code>null</code> not permitted).
+     * 
+     * @see #add(BoxAndWhiskerItem, Comparable, Comparable)
      */
     public void add(List list, Comparable rowKey, Comparable columnKey) {
-        BoxAndWhiskerItem item 
-            = BoxAndWhiskerCalculator.calculateBoxAndWhiskerStatistics(list);
+        BoxAndWhiskerItem item = BoxAndWhiskerCalculator
+                .calculateBoxAndWhiskerStatistics(list);
         add(item, rowKey, columnKey);
     }
     
@@ -132,62 +135,60 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * table.  The various median values are calculated.
      *
      * @param item  a box and whisker item (<code>null</code> not permitted).
-     * @param rowKey  the row key.
-     * @param columnKey  the column key.
+     * @param rowKey  the row key (<code>null</code> not permitted).
+     * @param columnKey  the column key (<code>null</code> not permitted).
+     * 
+     * @see #add(List, Comparable, Comparable)
      */
-    public void add(BoxAndWhiskerItem item, 
-                    Comparable rowKey, 
-                    Comparable columnKey) {
+    public void add(BoxAndWhiskerItem item, Comparable rowKey, 
+            Comparable columnKey) {
 
         this.data.addObject(item, rowKey, columnKey);
         
         // update cached min and max values
         int r = this.data.getRowIndex(rowKey);
         int c = this.data.getColumnIndex(columnKey);
-        if (this.maximumRangeValueRow == r 
-                && this.maximumRangeValueColumn == c) {
-            this.maximumRangeValue = Double.NaN;
+        if ((this.maximumRangeValueRow == r && this.maximumRangeValueColumn 
+                == c) || (this.minimumRangeValueRow == r 
+                && this.minimumRangeValueColumn == c))  {
+            updateBounds();
         }
-        if (this.minimumRangeValueRow == r 
-                && this.minimumRangeValueColumn == c) {
-            this.minimumRangeValue = Double.NaN;
-        }
+        else {
         
+            double minval = Double.NaN;
+            if (item.getMinOutlier() != null) {
+                minval = item.getMinOutlier().doubleValue();
+            }
+            double maxval = Double.NaN;
+            if (item.getMaxOutlier() != null) {
+                maxval = item.getMaxOutlier().doubleValue();
+            }
         
-        double minval = Double.NaN;
-        if (item.getMinOutlier() != null) {
-            minval = item.getMinOutlier().doubleValue();
-        }
-        double maxval = Double.NaN;
-        if (item.getMaxOutlier() != null) {
-            maxval = item.getMaxOutlier().doubleValue();
-        }
+            if (Double.isNaN(this.maximumRangeValue)) {
+                this.maximumRangeValue = maxval;
+                this.maximumRangeValueRow = r;
+                this.maximumRangeValueColumn = c;
+            }
+            else if (maxval > this.maximumRangeValue) {
+                this.maximumRangeValue = maxval;
+                this.maximumRangeValueRow = r;
+                this.maximumRangeValueColumn = c;
+            }
         
-        if (Double.isNaN(this.maximumRangeValue)) {
-            this.maximumRangeValue = maxval;
-            this.maximumRangeValueRow = r;
-            this.maximumRangeValueColumn = c;
-        }
-        else if (maxval > this.maximumRangeValue) {
-            this.maximumRangeValue = maxval;
-            this.maximumRangeValueRow = r;
-            this.maximumRangeValueColumn = c;
-        }
-        
-        if (Double.isNaN(this.minimumRangeValue)) {
-            this.minimumRangeValue = minval;
-            this.minimumRangeValueRow = r;
-            this.minimumRangeValueColumn = c;
-        }
-        else if (minval < this.minimumRangeValue) {
-            this.minimumRangeValue = minval;
-            this.minimumRangeValueRow = r;
-            this.minimumRangeValueColumn = c;
+            if (Double.isNaN(this.minimumRangeValue)) {
+                this.minimumRangeValue = minval;
+                this.minimumRangeValueRow = r;
+                this.minimumRangeValueColumn = c;
+            }
+            else if (minval < this.minimumRangeValue) {
+                this.minimumRangeValue = minval;
+                this.minimumRangeValueRow = r;
+                this.minimumRangeValueColumn = c;
+            }
         }
         
         this.rangeBounds = new Range(this.minimumRangeValue,
               this.maximumRangeValue);
-
         fireDatasetChanged();
 
     }
@@ -241,6 +242,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The mean value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMeanValue(int row, int column) {
 
@@ -261,6 +264,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The mean value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMeanValue(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -279,6 +284,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      *
      * @return The median value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMedianValue(int row, int column) {
         Number result = null;
@@ -297,6 +304,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the columnKey.
      *
      * @return The median value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMedianValue(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -315,6 +324,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The first quartile value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getQ1Value(int row, int column) {
         Number result = null;
@@ -333,6 +344,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The first quartile value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getQ1Value(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -351,6 +364,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The third quartile value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getQ3Value(int row, int column) {
         Number result = null;
@@ -369,6 +384,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The third quartile value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getQ3Value(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -386,6 +403,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param key  the column key.
      *
      * @return The column index.
+     * 
+     * @see #getColumnKey(int)
      */
     public int getColumnIndex(Comparable key) {
         return this.data.getColumnIndex(key);
@@ -397,6 +416,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      *
      * @return The column key.
+     * 
+     * @see #getColumnIndex(Comparable)
      */
     public Comparable getColumnKey(int column) {
         return this.data.getColumnKey(column);
@@ -406,6 +427,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * Returns the column keys.
      *
      * @return The keys.
+     * 
+     * @see #getRowKeys()
      */
     public List getColumnKeys() {
         return this.data.getColumnKeys();
@@ -417,6 +440,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param key  the row key.
      *
      * @return The row index.
+     * 
+     * @see #getRowKey(int)
      */
     public int getRowIndex(Comparable key) {
         return this.data.getRowIndex(key);
@@ -428,6 +453,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param row  the row index (zero-based).
      *
      * @return The row key.
+     * 
+     * @see #getRowIndex(Comparable)
      */
     public Comparable getRowKey(int row) {
         return this.data.getRowKey(row);
@@ -437,6 +464,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * Returns the row keys.
      *
      * @return The keys.
+     * 
+     * @see #getColumnKeys()
      */
     public List getRowKeys() {
         return this.data.getRowKeys();
@@ -446,6 +475,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * Returns the number of rows in the table.
      *
      * @return The row count.
+     * 
+     * @see #getColumnCount()
      */
     public int getRowCount() {
         return this.data.getRowCount();
@@ -455,6 +486,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * Returns the number of columns in the table.
      *
      * @return The column count.
+     * 
+     * @see #getRowCount()
      */
     public int getColumnCount() {
         return this.data.getColumnCount();
@@ -467,6 +500,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      *                         y-interval is taken into account.
      * 
      * @return The minimum value.
+     * 
+     * @see #getRangeUpperBound(boolean)
      */
     public double getRangeLowerBound(boolean includeInterval) {
         return this.minimumRangeValue;
@@ -479,6 +514,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      *                         y-interval is taken into account.
      * 
      * @return The maximum value.
+     * 
+     * @see #getRangeLowerBound(boolean)
      */
     public double getRangeUpperBound(boolean includeInterval) {
         return this.maximumRangeValue;
@@ -503,6 +540,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The minimum regular value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMinRegularValue(int row, int column) {
         Number result = null;
@@ -521,6 +560,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The minimum regular value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMinRegularValue(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -539,6 +580,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The maximum regular value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMaxRegularValue(int row, int column) {
         Number result = null;
@@ -557,6 +600,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The maximum regular value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMaxRegularValue(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -575,6 +620,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The minimum outlier.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMinOutlier(int row, int column) {
         Number result = null;
@@ -593,6 +640,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The minimum outlier.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMinOutlier(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -611,6 +660,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The maximum outlier.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMaxOutlier(int row, int column) {
         Number result = null;
@@ -629,6 +680,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The maximum outlier.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMaxOutlier(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -647,6 +700,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return A list of outlier values.
+     * 
+     * @see #getItem(int, int)
      */
     public List getOutliers(int row, int column) {
         List result = null;
@@ -665,6 +720,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return A list of outlier values.
+     * 
+     * @see #getItem(int, int)
      */
     public List getOutliers(Comparable rowKey, Comparable columnKey) {
         List result = null;
@@ -674,6 +731,52 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
             result = item.getOutliers();
         }
         return result;
+    }
+    
+    /**
+     * Resets the cached bounds, by iterating over the entire dataset to find
+     * the current bounds.
+     */
+    private void updateBounds() {
+        this.minimumRangeValue = Double.NaN;
+        this.minimumRangeValueRow = -1;
+        this.minimumRangeValueColumn = -1;
+        this.maximumRangeValue = Double.NaN;
+        this.maximumRangeValueRow = -1;
+        this.maximumRangeValueColumn = -1;
+        int rowCount = getRowCount();
+        int columnCount = getColumnCount();
+        for (int r = 0; r < rowCount; r++) {
+            for (int c = 0; c < columnCount; c++) {
+                BoxAndWhiskerItem item = getItem(r, c);
+                if (item != null) {
+                    Number min = item.getMinOutlier();
+                    if (min != null) {
+                        double minv = min.doubleValue();
+                        if (!Double.isNaN(minv)) {
+                            if (minv < this.minimumRangeValue || Double.isNaN(
+                                    this.minimumRangeValue)) {
+                                this.minimumRangeValue = minv;
+                                this.minimumRangeValueRow = r;
+                                this.minimumRangeValueColumn = c;
+                            }
+                        }
+                    }
+                    Number max = item.getMaxOutlier();
+                    if (max != null) {
+                        double maxv = max.doubleValue();
+                        if (!Double.isNaN(maxv)) {
+                            if (maxv > this.maximumRangeValue || Double.isNaN(
+                                    this.maximumRangeValue)) {
+                                this.maximumRangeValue = maxv;
+                                this.maximumRangeValueRow = r;
+                                this.maximumRangeValueColumn = c;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
     
     /**
